trying to fix mouse position

--- a/src/minshell.html
+++ b/src/minshell.html
@@ -43,7 +43,7 @@
         }
         canvas.emscripten {
             display: block;
-            object-fit: contain;
+            object-fit: stretch;
             width: 100vw;
             height: 100vh;
             image-rendering: pixelated;
