--- a/src/minshell.html
+++ b/src/minshell.html
@@ -55,7 +55,9 @@
     </script>
     </head>
     <body>
-        <canvas class=emscripten id=canvas oncontextmenu=event.preventDefault() tabindex=-1></canvas>
+        <div style="text-align: center ">
+            <canvas class=emscripten id=canvas oncontextmenu=event.preventDefault() tabindex=-1></canvas>
+        </div>
         <p id="output" />
         <script>
             var Module = {
