--- a/src/minshell.html
+++ b/src/minshell.html
@@ -31,8 +31,7 @@
     <link rel="shortcut icon" href="https://www.raylib.com/favicon.ico">
     
     <style>
-        body { margin: 0px; }
-        canvas.emscripten { border: 0px none; background-color: black; }
+        body{margin:0}canvas.emscripten{border:0 none;background-color:#000;margin: 0;position: absolute;top: 50%;left: 50%;-ms-transform: translate(-50%, -50%);transform: translate(-50%, -50%);}
     </style>
     <script type='text/javascript' src="https://cdn.jsdelivr.net/gh/eligrey/FileSaver.js/dist/FileSaver.min.js"> </script>
     <script type='text/javascript'>
